# LLM-CHAT-PLATFORM

./: CLAUDE.md  Dockerfile  Makefile  Project Instruction.md  README.md  _temp_raw.py  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
app/: config.py  main.py
app/models/: __init__.py  audit_log.py  crawler.py  digital_employee.py  file_record.py  im.py  login_history.py  model_config.py  nl2sql.py  notification.py  skill.py  sys_config.py  user.py
app/sandbox/: __init__.py  executor.py  sql_validator.py
app/scheduler/: __init__.py  crawler_scheduler.py
app/schemas/: __init__.py  auth.py  common.py  crawler.py  digital_employee.py  file_record.py  im.py  model_config.py  nl2sql.py  notification.py  skill.py  sys_config.py
app/services/: __init__.py  audit_service.py  auth_service.py  compliance_service.py  crawler_service.py  dashboard_service.py  digital_employee_service.py  elasticsearch_service.py  email_service.py  file_service.py  im_service.py  model_service.py  nl2sql_service.py  notification_service.py  skill_service.py  sys_config_service.py  user_service.py
app/utils/: __init__.py  email.py  export.py  pagination.py  response.py  sensitive_filter.py
tests/: __init__.py  conftest.py  test_api_integration.py  test_auth.py  test_compliance.py  test_crawler.py  test_dept.py  test_menu.py  test_nl2sql.py  test_role.py
